--- a/Frontend/src/Components/Card-Jogo/Card.css
+++ b/Frontend/src/Components/Card-Jogo/Card.css
@@ -10,7 +10,6 @@
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  cursor: pointer;
   perspective: 1000px;
 }
 
@@ -23,9 +22,9 @@
 }
 
 .cardImage {
-  width: 100%; /* Garante que a imagem ocupe toda a largura do card */
-  height: auto; /* Mantém a proporção da imagem */
-  object-fit: cover; /* Garante que a imagem cubra todo o espaço do card sem distorção */
+  width: 100%;
+  height: auto;
+  object-fit: cover; 
   margin-top: 25px;
 }
 
