--- a/Frontend/src/pages/Home/Home.css
+++ b/Frontend/src/pages/Home/Home.css
@@ -1,17 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('../../Assets/Colors/Colors.css');
-
-:root {
-    --fonte-primaria: 'Poppins', sans-serif;
-    --branco: #FFFFFF;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: var(--fonte-primaria);
-}
 
 .paginaPrincipal {
     background: linear-gradient(to bottom, #1B3778, #3266DE);
@@ -19,13 +6,11 @@
     min-height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     padding: 2rem;
     position: relative;
 }
 
 .titulos {
-    font-family: var(--fonte-primaria);
     font-size: 2.8rem;
     font-weight: 700;
     line-height: 1.06;
@@ -87,7 +72,7 @@
     height: 100vh;
     top: 15vh;
     left: 0;
-    animation: flutuar 8s ease-in-out infinite alternate;
+    animation: flutuar 5s ease-in-out infinite alternate;
 }
 
 .nuvem2 {
@@ -96,11 +81,10 @@
     height: 100vh;
     top: -10vh;
     right: 0;
-    animation: flutuarDireita 8s ease-in-out infinite alternate;
+    animation: flutuarDireita 5s ease-in-out infinite alternate;
 }
 
 /* animação das nuvens */
-
 @keyframes flutuar {
     0% {
         transform: translateY(0);
@@ -158,8 +142,12 @@
     cursor: pointer;
     position: absolute;
     z-index: 100;
+    transition: transform 0.3s;
 }
 
+.scroll:hover {
+    transform: translateX(-50%) scale(1.2);
+}
 
 .secaoCards {
     display: flex;
